Se agrega disponibilidad como migracion y se modifica el modelo Medico par aque haga referencia a Disponibilidad
