# server/app/DataTables/DisponibilidadDataTable.php
@@ -1,0 +1,92 @@
+<?php
+
+namespace App\DataTables;
+
+use App\Models\Disponibilidad;
+use Form;
+use Yajra\Datatables\Services\DataTable;
+
+class DisponibilidadDataTable extends DataTable
+{
+
+    /**
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function ajax()
+    {
+        return $this->datatables
+            ->eloquent($this->query())
+            ->addColumn('action', 'disponibilidads.datatables_actions')
+            ->make(true);
+    }
+
+    /**
+     * Get the query object to be processed by datatables.
+     *
+     * @return \Illuminate\Database\Query\Builder|\Illuminate\Database\Eloquent\Builder
+     */
+    public function query()
+    {
+        $disponibilidads = Disponibilidad::query();
+
+        return $this->applyScopes($disponibilidads);
+    }
+
+    /**
+     * Optional method if you want to use html builder.
+     *
+     * @return \Yajra\Datatables\Html\Builder
+     */
+    public function html()
+    {
+        return $this->builder()
+            ->columns($this->getColumns())
+            ->addAction(['width' => '10%'])
+            ->ajax('')
+            ->parameters([
+                'dom' => 'Bfrtip',
+                'scrollX' => false,
+                'buttons' => [
+                    'print',
+                    'reset',
+                    'reload',
+                    [
+                         'extend'  => 'collection',
+                         'text'    => '<i class="fa fa-download"></i> Export',
+                         'buttons' => [
+                             'csv',
+                             'excel',
+                             'pdf',
+                         ],
+                    ],
+                    'colvis'
+                ]
+            ]);
+    }
+
+    /**
+     * Get columns.
+     *
+     * @return array
+     */
+    private function getColumns()
+    {
+        return [
+            'dia' => ['name' => 'dia', 'data' => 'dia'],
+            'hora_inicio' => ['name' => 'hora_inicio', 'data' => 'hora_inicio'],
+            'hora_termino' => ['name' => 'hora_termino', 'data' => 'hora_termino'],
+            'Medico_id' => ['name' => 'Medico_id', 'data' => 'Medico_id'],
+            'remember_token' => ['name' => 'remember_token', 'data' => 'remember_token']
+        ];
+    }
+
+    /**
+     * Get filename for export.
+     *
+     * @return string
+     */
+    protected function filename()
+    {
+        return 'disponibilidads';
+    }
+}
