# server/app/Repositories/MedicoRepository.php
@@ -8,7 +8,7 @@ use InfyOm\Generator\Common\BaseRepository;
 /**
  * Class MedicoRepository
  * @package App\Repositories
- * @version November 3, 2017, 12:44 am UTC
+ * @version November 14, 2017, 5:50 am UTC
  *
  * @method Medico findWithoutFail($id, $columns = ['*'])
  * @method Medico find($id, $columns = ['*'])
@@ -21,7 +21,8 @@ class MedicoRepository extends BaseRepository
      */
     protected $fieldSearchable = [
         'Especialidad_id',
-        'Persona_id'
+        'Persona_id',
+        'remember_token'
     ];
 
     /**
