# server/resources/views/disponibilidads/show_fields.blade.php
@@ -1,0 +1,54 @@
+<!-- Id Field -->
+<div class="form-group">
+    {!! Form::label('id', 'Id:') !!}
+    <p>{!! $disponibilidad->id !!}</p>
+</div>
+
+<!-- Dia Field -->
+<div class="form-group">
+    {!! Form::label('dia', 'Dia:') !!}
+    <p>{!! $disponibilidad->dia !!}</p>
+</div>
+
+<!-- Hora Inicio Field -->
+<div class="form-group">
+    {!! Form::label('hora_inicio', 'Hora Inicio:') !!}
+    <p>{!! $disponibilidad->hora_inicio !!}</p>
+</div>
+
+<!-- Hora Termino Field -->
+<div class="form-group">
+    {!! Form::label('hora_termino', 'Hora Termino:') !!}
+    <p>{!! $disponibilidad->hora_termino !!}</p>
+</div>
+
+<!-- Medico Id Field -->
+<div class="form-group">
+    {!! Form::label('Medico_id', 'Medico Id:') !!}
+    <p>{!! $disponibilidad->Medico_id !!}</p>
+</div>
+
+<!-- Remember Token Field -->
+<div class="form-group">
+    {!! Form::label('remember_token', 'Remember Token:') !!}
+    <p>{!! $disponibilidad->remember_token !!}</p>
+</div>
+
+<!-- Created At Field -->
+<div class="form-group">
+    {!! Form::label('created_at', 'Created At:') !!}
+    <p>{!! $disponibilidad->created_at !!}</p>
+</div>
+
+<!-- Updated At Field -->
+<div class="form-group">
+    {!! Form::label('updated_at', 'Updated At:') !!}
+    <p>{!! $disponibilidad->updated_at !!}</p>
+</div>
+
+<!-- Deleted At Field -->
+<div class="form-group">
+    {!! Form::label('deleted_at', 'Deleted At:') !!}
+    <p>{!! $disponibilidad->deleted_at !!}</p>
+</div>
+
