# server/storage/docs/api-docs.json
@@ -603,6 +603,205 @@
                 }
             }
         },
+        "/disponibilidads": {
+            "get": {
+                "tags": [
+                    "Disponibilidad"
+                ],
+                "summary": "Get a listing of the Disponibilidads.",
+                "description": "Get all Disponibilidads",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/Disponibilidad"
+                                    }
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Disponibilidad"
+                ],
+                "summary": "Store a newly created Disponibilidad in storage",
+                "description": "Store Disponibilidad",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Disponibilidad that should be stored",
+                        "required": false,
+                        "schema": {
+                            "$ref": "#/definitions/Disponibilidad"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/Disponibilidad"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/disponibilidads/{id}": {
+            "get": {
+                "tags": [
+                    "Disponibilidad"
+                ],
+                "summary": "Display the specified Disponibilidad",
+                "description": "Get Disponibilidad",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of Disponibilidad",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/Disponibilidad"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Disponibilidad"
+                ],
+                "summary": "Update the specified Disponibilidad in storage",
+                "description": "Update Disponibilidad",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of Disponibilidad",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Disponibilidad that should be updated",
+                        "required": false,
+                        "schema": {
+                            "$ref": "#/definitions/Disponibilidad"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/Disponibilidad"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Disponibilidad"
+                ],
+                "summary": "Remove the specified Disponibilidad from storage",
+                "description": "Delete Disponibilidad",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of Disponibilidad",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "type": "string"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/especialidads": {
             "get": {
                 "tags": [
@@ -4076,6 +4275,39 @@
                     "description": "Provincia_id",
                     "type": "integer",
                     "format": "int32"
+                }
+            }
+        },
+        "Disponibilidad": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "dia": {
+                    "description": "dia",
+                    "type": "string"
+                },
+                "hora_inicio": {
+                    "description": "hora_inicio",
+                    "type": "string"
+                },
+                "hora_termino": {
+                    "description": "hora_termino",
+                    "type": "string"
+                },
+                "Medico_id": {
+                    "description": "Medico_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "remember_token": {
+                    "description": "remember_token",
+                    "type": "string"
                 }
             }
         },
